# DL_group_6

./: README.md
dl/: pyproject.toml
dl/dl/: calc_mean_variance.py  make_image_data.py  single_image_prediction.py
dl/dl/model_testing/: test_alexnet.py  test_cnn.py
dl/dl/model_training/: alexnet.py  initial_CNN.py
dl/dl/visualizations/: heat_map_images.py  visualization_dataset.ipynb  visualize_alexnet.py  visualize_cnn.py
