[tool.poetry]
name = "dl"
version = "0.1.0"
description = ""
authors = ["Floor99 <floorhalkes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
torchvision = "^0.18.0"
scikit-learn = "^1.4.2"
torcheval = "^0.0.7"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"
pyarrow = "^16.0.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
